--- a/C_26_语法新增内容.ipynb
+++ b/C_26_语法新增内容.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -196,48 +196,7 @@
      "languageId": "polyglot-notebook"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>1</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "// 集合初始化后可正常使用\n",
     "public List<double> Areas {get; set;} = new List<double>();\n",
@@ -281,6 +240,418 @@
     "    //double Length2 {get; set;} = 12.3;   // 非静态，编译错误\n",
     "}"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### 26.5 表达式函数体成员"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sonoma County\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 方法声明：方法体语法\n",
+    "public string GetWineGrowingRegion(string countryName, string regionName)\n",
+    "{\n",
+    "    return countryName + \":\" + regionName; \n",
+    "}\n",
+    "// 方法声明：表达式函数体\n",
+    "public string GetWineGrowingRegion1(string countaryName, string regionName) \n",
+    "    => countaryName + \":\" + regionName;\n",
+    "// 只读属性的例子\n",
+    "public string MyFavoriteWineGrowingRegion => \"Sonoma County\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(408) 418-428"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "public int AreaCode {get; set;} = 408;\n",
+    "public int CentralOfficeCode {get; set;} = 418;\n",
+    "public int LineNumber {get; set;} = 428;\n",
+    "\n",
+    "// 不能同时使用访问器列表和表达式函数体\n",
+    "//public string PhoneNumber {get;}\n",
+    "//    => $\"({AreaCode}) {CentralOfficeCode}-{LineNumber}\";\n",
+    "\n",
+    "// 正确执行\n",
+    "public string PhoneNumber1\n",
+    "    => $\"({AreaCode}) {CentralOfficeCode}-{LineNumber}\";"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### 26.6 using static"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// Console类的静态成员WriteLine\n",
+    "using System;   // System是命名空间\n",
+    "Console.WriteLine(\"Hello\");   // Console是类名"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// using static 用法\n",
+    "using static System.Console;\n",
+    "WriteLine(\"Hello\");   // 不需要类名了"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 常规枚举使用方式\n",
+    "DateTime day = new DateTime(2023,01,27);\n",
+    "if (day.DayOfWeek == DayOfWeek.Monday || day.DayOfWeek == DayOfWeek.Thursday)\n",
+    "{\n",
+    "    // ...\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 使用using static语句,简化枚举使用\n",
+    "using static System.DayOfWeek;\n",
+    "DateTime day = new DateTime(2023,01,27);\n",
+    "if (day.DayOfWeek == Monday ||\n",
+    "    day.DayOfWeek == Thursday)\n",
+    "{\n",
+    "    // ...\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### 26.7 空条件运算符"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class Student {}\n",
+    "Student[] students = null;\n",
+    "//int count = students.Length;   // 产生异常\n",
+    "//Student firstStu = students[0];   // 产生异常"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 使用空条件运算符避免空引用异常\n",
+    "int? count = students?.Length;\n",
+    "Student firstStu = students?[0];"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### 26.9 nameof 运算符"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// 常规打印函数名的方法\n",
+    "static void SomeMethod()\n",
+    "{\n",
+    "    WriteLine($\"SomeMethod:Entering\");\n",
+    "    // ...\n",
+    "    WriteLine($\"SomeMethod:Exiting\");\n",
+    "}\n",
+    "// 当方法被重命名后，方法名称和输出的字符串不再匹配\n",
+    "// 使用nameof运算符，重命名操作会自动修改nameof参数，保证一致\n",
+    "static void SomeMethod1()\n",
+    "{\n",
+    "    WriteLine($\"{nameof(SomeMethod1)}:Entering\");\n",
+    "    // ...\n",
+    "    WriteLine($\"{nameof(SomeMethod1)}:Exiting\");\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "source": [
+    "##### 26.14 值元组"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Paul Age:99\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "// 元组示例\n",
+    "(string, int)CreateSampleTuple()\n",
+    "{\n",
+    "    return (\"Paul\", 99);\n",
+    "}\n",
+    "var myTuple = CreateSampleTuple();\n",
+    "Console.WriteLine($\"Name: {myTuple.Item1} Age:{myTuple.Item2}\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -310,13 +681,45 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
       "aliases": [],
       "languageName": "KQL",
       "name": "kql"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
      }
     ]
    }
