--- a/C_26_语法新增内容.ipynb
+++ b/C_26_语法新增内容.ipynb
@@ -681,6 +681,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
@@ -690,6 +691,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -719,6 +721,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      }
     ]
